--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,4 @@
-p {
-  margin: 0;
-}
+p,
 h1,
 h2,
 h3,
@@ -15,11 +13,15 @@ h6 {
   padding: 0 15px;
 }
 
-images {
+.images {
   display: block;
 }
 
-.body {
+img {
+  display: block;
+}
+
+body {
   font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #ffffff;
@@ -34,8 +36,9 @@ ol {
   padding: 0;
 }
 .logo-nav {
-  border-bottom: 1px solid #e7e9fc; 
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .logo-header {
   display: flex;
@@ -44,7 +47,6 @@ ol {
 .logo-navigation {
   display: flex;
   align-items: center;
-  margin: 0 auto;
 }
 .logo-link {
   font-family: "Raleway", sans-serif;
@@ -54,7 +56,7 @@ ol {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  margin-right: 76px; 
+  margin-right: 76px;
   position: relative;
   color: #404bbf;
 }
@@ -76,7 +78,7 @@ ol {
   letter-spacing: 0.02em;
   display: block;
   color: #2e2f42;
-  padding: 24px 0 24px; 
+  padding: 24px 0 24px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .current {
@@ -124,16 +126,16 @@ ol {
   text-align: center;
   background-color: #2e2f42;
   padding-top: 188px;
-  padding-bottom: 188px; 
+  padding-bottom: 188px;
   background-image: linear-gradient(
-    rgba(46, 47, 66, 0.7),
-    rgba(46, 47, 66, 0.7)
-  ),
-  url(../images/img-name.jpeg);
-max-width: 1440px;
-background-repeat: no-repeat;
-background-position: center;
-background-size: cover;
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/img-name.jpeg);
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .button-title {
@@ -163,16 +165,11 @@ background-size: cover;
   cursor: pointer;
   color: #ffffff;
   background-color: #4d5ae5;
-  margin: auto; 
+  margin: auto;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-description {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -192,19 +189,16 @@ background-size: cover;
   width: 64;
   height: 64;
 }
-.description-main {
-  padding-top: 188px;
-  padding-bottom: 188px;
-}
-.description-icons{
-  display: flex; 
-  align-items: center; 
-  justify-content: center;  
+
+.description-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 112px;
-  background-color: #f4f4fd; 
-  border-radius: 4px; 
-  border: 1px solid #8e8f99;  
-  margin-bottom: 8px; 
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  margin-bottom: 8px;
 }
 .description-h2 {
   position: absolute;
@@ -227,9 +221,12 @@ background-size: cover;
 }
 .description-title {
   margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
 }
 .description-text {
   font-size: 16px;
+  font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
@@ -260,8 +257,9 @@ background-size: cover;
   background-color: #ffffff;
   margin: auto;
   width: calc((100% - 72px) / 4);
-  border-radius: 0px 0px 4px 4px; 
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .first-name-one {
   padding: 32px 0;
@@ -281,33 +279,32 @@ background-size: cover;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
-  color: #434455; 
+  color: #434455;
 }
-.team-link-list { 
-  display: flex; 
-  justify-content: center; 
+.team-link-list {
+  display: flex;
+  justify-content: center;
   gap: 24px;
-} 
+}
 .team-social {
   width: 40px;
-  height: 40px; 
-
+  height: 40px;
 }
 .team-link {
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
-  display: flex;  
+  display: flex;
   height: 100%;
-  align-items: center; 
+  align-items: center;
   justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-link:hover,
-.team-link:focus { 
+.team-link:focus {
   background-color: #404bbf;
-} 
+}
 .social-icon {
   fill: #f4f4fd;
 }
@@ -336,11 +333,13 @@ background-size: cover;
 .apps-item {
   width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .apps-item:hover {
-  transform: translateY(0%); 
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .apps-item:hover .picture-text {
   transform: translateY(0%);
@@ -349,33 +348,34 @@ background-size: cover;
   background: url("path_to_image");
 }
 .apps-box {
-  position: relative; 
+  position: relative;
   overflow: hidden;
 }
 .picture-text {
-  position: absolute;  
-  top: 0; 
-  font-size: 16px; 
+  position: absolute;
+  top: 0;
+  font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.02em;  
+  letter-spacing: 0.02em;
   color: #f4f4fd;
   padding: 40px 32px;
   background-color: #4d5ae5;
-  width: 100%;  
-  height: 100%; 
-  transform: translateY(0%); 
+  width: 100%;
+  height: 100%;
+  transform: translateY(0%);
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .box {
   position: relative;
-  overflow: hidden; 
+  overflow: hidden;
 }
 .apps-text:hover {
   transform: translateY(0%);
 }
 .apps-list:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .banking-app-one {
   padding: 32px 16px;
@@ -408,17 +408,16 @@ background-size: cover;
 .footer-logo {
   background-color: #2e2f42;
   padding-top: 100px;
-  padding-bottom: 100px;  
- }
+  padding-bottom: 100px;
+}
 .container-logo-box {
-  display: flex; 
+  display: flex;
   align-items: baseline;
-  margin-right: 120px;
 }
 .footer-logo-box {
-  margin-right: 120px 
+  margin-right: 120px;
 }
-.logo-link {
+.footer-logo-link {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -440,6 +439,7 @@ background-size: cover;
 }
 
 .logo-text {
+  max-width: 264px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -447,20 +447,20 @@ background-size: cover;
 }
 .footer-text {
   font-weight: 500;
-  font-size: 16px; 
-  line-height: 1.5; 
+  font-size: 16px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #FFFFFF;
-  margin-bottom: 16px; 
+  color: #ffffff;
+  margin-bottom: 16px;
 }
 
 .footer-social-link {
-  display: flex; 
-  gap: 16px; 
+  display: flex;
+  gap: 16px;
 }
 .footer-social-list {
-  width: 40px; 
-  height: 40px;  
+  width: 40px;
+  height: 40px;
 }
 .footer-link {
   width: 100%;
@@ -468,13 +468,13 @@ background-size: cover;
   background-color: #4d5ae5;
   border-radius: 50%;
   display: flex;
-  align-items: center; 
-  justify-content: center; 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-link:hover,
 .footer-link:focus {
-  background-color: #31d0aa; 
+  background-color: #31d0aa;
 }
 .footer-social-icon {
   fill: #f4f4fd;
