--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,7 @@ ol {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/img-name.jpeg);
+    url(../images/heropic.jpg);
   max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
@@ -145,6 +145,7 @@ ol {
   letter-spacing: 0.02em;
   max-width: 496px;
   margin: auto;
+  margin-bottom: 48px;
   color: #ffffff;
 }
 
@@ -173,7 +174,7 @@ ol {
   padding-top: 120px;
   padding-bottom: 120px;
 }
-.description-icon {
+.container-description-icon {
   width: 264px;
   height: 112px;
   display: flex;
@@ -184,6 +185,8 @@ ol {
   border-radius: 4px;
   border: 1px solid #8e8f99;
   margin-bottom: 8px;
+  margin-right: 24px;
+  margin: 0 auto;
 }
 .icon-list {
   width: 64;
