--- a/css/styles.css
+++ b/css/styles.css
@@ -173,6 +173,7 @@ ol {
 .section-description {
   padding-top: 120px;
   padding-bottom: 120px;
+  margin: 0 auto;
 }
 .container-description-icon {
   width: 264px;
@@ -375,10 +376,7 @@ ol {
 .apps-text:hover {
   transform: translateY(0%);
 }
-.apps-list:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+
 .banking-app-one {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
